--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,31 +1,48 @@
-name: CI Pipeline
+name: Jira CI/CD Integration
 
 on:
   pull_request:
-    branches: [ "main" ]
-
-permissions:
-  checks: write
-  pull-requests: write
+    types:
+      - closed
 
 jobs:
-  build-and-test:
+  update-jira-and-slack:
+    if: github.event.pull_request.merged == true
+    name: Update Jira & Notify Slack
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    - name: Checkout
+      uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
+    - name: Jira Login
+      uses: atlassian/gajira-login@v3
+      env:
+        JIRA_BASE_URL: https://anhkhoaxn11.atlassian.net
+        JIRA_USER_EMAIL: anhkhoaxn11@gmail.com
+        JIRA_API_TOKEN: ${{ secrets.JIRA_API_TOKEN }}
 
-      - name: Install dependencies
-        run: npm install
+    - name: Extract Issue Key from Pull Request Title
+      id: extract
+      run: |
+        echo "🔎 Extracting issue key from PR title: ${{ github.event.pull_request.title }}"
+        ISSUE_KEY=$(echo "${{ github.event.pull_request.title }}" | grep -oE '[A-Z]+-[0-9]+')
+        echo "✅ Found issue key: $ISSUE_KEY"
+        echo "issue=$ISSUE_KEY" >> $GITHUB_OUTPUT
 
-      - name: Run lint
-        run: npm run lint
+    - name: Transition Jira Issue to Done
+      uses: atlassian/gajira-transition@v3
+      with:
+        issue: ${{ steps.extract.outputs.issue }}
+        transition: "Done"
 
-      - name: Run tests
-        run: npm test
+    - name: Notify Slack
+      if: ${{ steps.extract.outputs.issue != '' }}
+      uses: slackapi/slack-github-action@v1.24.0
+      with:
+        payload: |
+          {
+            "text": ":white_check_mark: Jira issue *${{ steps.extract.outputs.issue }}* has been closed after PR was merged!"
+          }
+      env:
+        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
