--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,8 @@ jobs:
     - name: Jira Login
       uses: atlassian/gajira-login@v3
       env:
-        JIRA_BASE_URL: https://anhkhoaxn11.atlassian.net
-        JIRA_USER_EMAIL: anhkhoaxn11@gmail.com
+        JIRA_BASE_URL: https://minhtrungbttv.atlassian.net/
+        JIRA_USER_EMAIL: minhtrungbttv@gmail.com
         JIRA_API_TOKEN: ${{ secrets.JIRA_API_TOKEN }}
 
     - name: Extract Issue Key from Pull Request Title
